@@ -77,7 +77,7 @@
          <item>
           <widget class="QCheckBox" name="enable_finger">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="text">
             <string>Finger</string>
